tests/run/error_u64_overflow.out
error[integer_overflow]: integer overflow
  --> tests/run/error_u64_overflow.em:5:21 (in main)
  why:    arithmetic requires the result to fit the target integer type
  values: lhs = 18000000000000000000, rhs = 9000000000000000000
  hint:   use a wider integer type, or a wrapping operator (wrapping_add/_sub/_mul) for modular arithmetic
